2001-05-25  Richard Kreckel  <kreckel@ginac.de>

        * autoconf/floatparam.c (double_wordorder_bigendian_p): new symbol.
        * src/float/dfloat/cl_DF.h: Check for double_wordorder_bigendian_p.
        * Removed LiDIA interface since that is now outdated (namespace cln)
          and maintained elsewhere.
        * Adjusted dates and final touches for 1.1.1.

2001-05-19  Richard Kreckel  <kreckel@ginac.de>

        * INSTALL: Update toolchain info: no egcs, some more platforms.
        * doc/cln.tex: Likewise.

2001-05-18  Richard Kreckel  <kreckel@ginac.de>

        * src/base/cl_low.h: prepended variables declared inside macros
          with underscore.  Fixes equal_hashcode() on various platforms.

2001-04-25  Richard Kreckel  <kreckel@ginac.de>

        * src/base/cl_low.h: Added several checks if NO_ASM is defined, so
          this definition becomes actually useful.  This is needed for 
          compilation on Arm until somebody fixes the assembler files for Arm.
        * src/base/digitseq/cl_asm.h: Likewise.
        * src/base/digitseq/cl_asm_.cc: Likewise.
        * */Makefile.in: Added `override' in front of `CPPFLAGS +=' so
           one can say `make CPPFLAGS=-DFOOBAR'.

2001-03-26  Arvid Norberg <c99ang@cs.umu.se>

        * src/base/random/cl_random_from.cc: ported to beos.

2001-03-05  Richard Kreckel  <kreckel@ginac.de>

        * include/cln/modules.h (CL_JUMP_TO): Fix IA64 brokenness.

2001-01-28  Richard Kreckel  <kreckel@ginac.de>

        * include/cln/number.h (cl_as_N): Remove bogus comment.

2001-01-22  Richard Kreckel  <kreckel@ginac.de>

        * configure.in: Make build in separate builddir possible (again).

2001-01-22  Richard Kreckel  <kreckel@ginac.de>

        * include/cln/*.h: Change signatures of all classes' methods
          cln::cl_foo::operator new(size_t, cl_foo*) to
          cln::cl_foo::operator new(size_t, void*) so one can declare
          std::vector<cln::cl_foo>, std::list<cln::cl_foo> etc. for