@@ -1,3 +1,8 @@
+2001-05-25  Bruno Haible  <haible@clisp.cons.org>
+
+        * src/base/digitseq/cl_asm_arm_.cc: Use #0x instead of #& to designate
+          hexadecimal constants.
+
 2001-05-25  Richard Kreckel  <kreckel@ginac.de>
 
         * autoconf/floatparam.c (double_wordorder_bigendian_p): new symbol.
